mobile-first complete: nav, intro, skills

--- a/index.html
+++ b/index.html
@@ -14,6 +14,60 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Experience</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <section class="intro">
+    <div class="img-cont">
+      <div>
+        <img src="./img/headshot.jpg" alt="Headshot">
+      </div>
+    </div>
+    <div>
+      <h1>Shawn Henry</h1>
+      <p class="tagline">Front End Web Developer</p>
+      <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto neque sed, recusandae iusto ullam nulla velit dignissimos, dolorem ipsa libero et consectetur aperiam tenetur sapiente, a suscipit consequatur fuga? Quos!</p>
+    </div>
+    <button>Reach Out</button>
+  </section>
+
+  <section class="skills">
+    <h3>Skills</h3>
+    <hr>
+    <ul>
+      <li>Responsive Design</li>
+      <li>Mobile First approach</li>
+      <li>DOM Manipulation</li>
+      <li>Version Control</li>
+    </ul>
+  </section>
+
+  <section class="work-hist">
+    <h3>Experience</h3>
+    <hr>
+    <ul>
+      <li>
+        <p class="date">4<span>years</span></p>
+        <div>
+          <h4>ProWatercraft Racing</h4>
+          <p>Website Manager, Sales Associate</p>
+        </div>
+      </li>
+      <li>
+        <p class="date">4<span>years</span></p>
+        <div></div>
+      </li>
+      <li>
+        <p class="date">1<span>year</span></p>
+        <div></div>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
