mobile completed: experience

--- a/index.html
+++ b/index.html
@@ -55,17 +55,23 @@
       <li>
         <p class="date">4<span>years</span></p>
         <div>
-          <h4>ProWatercraft Racing</h4>
+          <h4>ProWatercraft Racing LLC</h4>
           <p>Website Manager, Sales Associate</p>
         </div>
       </li>
       <li>
-        <p class="date">4<span>years</span></p>
-        <div></div>
+        <p class="date">5<span>years</span></p>
+        <div>
+          <h4>Low and Mean LLC</h4>
+          <p>Website Manager, Sales Associate</p>
+      </div>
       </li>
       <li>
         <p class="date">1<span>year</span></p>
-        <div></div>
+        <div>
+            <h4>Efficient Power Design</h4>
+            <p>Technical Advisor</p>
+        </div>
       </li>
     </ul>
   </section>
