finish mobile HTML and CSS, LESS

--- a/index.html
+++ b/index.html
@@ -75,5 +75,25 @@
       </li>
     </ul>
   </section>
+
+  <section class="contact">
+    <h3>Contact</h3>
+    <hr>
+    <form action="#">
+      <label>name</label>
+      <input type="text">
+      <label>Email</label>
+      <input type="text">
+      <label>Message</label>
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <input type="submit">
+    </form>
+  </section>
+
+  <footer>
+    <p>
+      Copyright © 2019
+    </p>
+  </footer>
 </body>
 </html>
