add tablet and desktop CSS queries, meta viewport tag

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>My Resume</title>
+  <title>Shawn Henry</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -25,7 +26,7 @@
 
   <section class="intro">
     <div class="img-cont">
-      <div>
+      <div class="headshot">
         <img src="./img/headshot.jpg" alt="Headshot">
       </div>
     </div>
@@ -37,43 +38,46 @@
     <button>Reach Out</button>
   </section>
 
-  <section class="skills">
-    <h3>Skills</h3>
-    <hr>
-    <ul>
-      <li>Responsive Design</li>
-      <li>Mobile First approach</li>
-      <li>DOM Manipulation</li>
-      <li>Version Control</li>
-    </ul>
-  </section>
+  <section class="detail">
 
-  <section class="work-hist">
-    <h3>Experience</h3>
-    <hr>
-    <ul>
-      <li>
-        <p class="date">4<span>years</span></p>
-        <div>
-          <h4>ProWatercraft Racing LLC</h4>
-          <p>Website Manager, Sales Associate</p>
+    <div class="skills">
+      <h3>Skills</h3>
+      <hr>
+      <ul>
+        <li>Responsive Design</li>
+        <li>Mobile First approach</li>
+        <li>DOM Manipulation</li>
+        <li>Version Control</li>
+      </ul>
+    </div>
+  
+    <div class="work-hist">
+      <h3>Experience</h3>
+      <hr>
+      <ul>
+        <li>
+          <p class="date">4<span>years</span></p>
+          <div>
+            <h4>ProWatercraft Racing LLC</h4>
+            <p>Website Manager, Sales Associate</p>
+          </div>
+        </li>
+        <li>
+          <p class="date">5<span>years</span></p>
+          <div>
+            <h4>Low and Mean LLC</h4>
+            <p>Website Manager, Sales Associate</p>
         </div>
-      </li>
-      <li>
-        <p class="date">5<span>years</span></p>
-        <div>
-          <h4>Low and Mean LLC</h4>
-          <p>Website Manager, Sales Associate</p>
-      </div>
-      </li>
-      <li>
-        <p class="date">1<span>year</span></p>
-        <div>
-            <h4>Efficient Power Design</h4>
-            <p>Technical Advisor</p>
-        </div>
-      </li>
-    </ul>
+        </li>
+        <li>
+          <p class="date">1<span>year</span></p>
+          <div>
+              <h4>Efficient Power Design</h4>
+              <p>Technical Advisor</p>
+          </div>
+        </li>
+      </ul>
+    </div>
   </section>
 
   <section class="contact">
