add personal sales description

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
       <h1>Shawn Henry</h1>
       <p class="tagline">Front End Web Developer</p>
-      <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto neque sed, recusandae iusto ullam nulla velit dignissimos, dolorem ipsa libero et consectetur aperiam tenetur sapiente, a suscipit consequatur fuga? Quos!</p>
+      <p class="description">Let my work speak for itself. My original designs will directly translate to a beautiful, responsive website for your clientele. Make the investment in yourself today.</p>
     </div>
     <button>Reach Out</button>
   </section>
